Fix tooltip mouseouver and out and bug where it would go off screen

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -6236,7 +6236,7 @@ svg {
   fill: transparent;
 }
 
-.focus {
+.tooltip {
   font-family: "Source Sans Pro", sans-serif;
 }
 
